Add urls for signup, login and user dashboard
Also added some styling to the index page with login and signup btns

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ whitenoise = "*"
 python-decouple = "*"
 requests = "*"
 pytest-django = "*"
+social-auth-app-django = "*"
 
 [requires]
 python_version = "3.6"
